--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>question</title>
     <link
       rel="stylesheet"
     />
     <link rel="shortcut icon" type="image/png" href="./img/heart.svg" />
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/style.css" /><head>
+  <!-- Existing meta tags and stylesheets -->
+
+  <!-- Add the audio element -->
+  <audio id="valentineSong">
+  <source src="img/the_walls_solo.mp3" type="audio/mp3">
+  Your browser does not support the audio tag.
+</audio>
+   
+
+  <!-- Existing script and other elements -->
+</head>
+
   </head>
 
   <body>
@@ -51,7 +63,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy Valentine's Day babe</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
